--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
         <button class="copy-location-btn">Copy Location</button>
     </section>
 
-    <section id="map">
-        
-    </section>
+    <main class="container">
+        <div id="map"></div>
+
+    </main>
 
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3LyOQ8tGZCuzYZgEcHGaHnap5wlC_lC0&callback=initMap" type="text/javascript">
-    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3LyOQ8tGZCuzYZgEcHGaHnap5wlC_lC0&callback=initMap"
+        type="text/javascript">
+        </script>
     <script src="lib/axios.js"></script>
     <script src="js/main.js"></script>
 </body>
