--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body onload="onInit()">
+<body >
 
     <header class="main-header">
         <div class="container flex space-between">
@@ -40,7 +40,7 @@
         type="text/javascript">
         </script>
     <script src="lib/axios.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/map.controller.js"></script>
 </body>
 
 </html>
