--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body >
+<body>
 
     <header class="main-header flex">
         <div class="container flex space-between">
@@ -16,8 +16,8 @@
 
             <form class="search-form flex">
                 <input type="text" class="search-input" placeholder="Search Location..." />
-                <button class="search-btns my-location-btn">My Location</button>
                 <button class="search-btns search-btn">Search</button>
+                <button class="search-btns my-location-btn">My Location</button>
             </form>
         </div>
     </header>
@@ -46,7 +46,7 @@
 
 
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3LyOQ8tGZCuzYZgEcHGaHnap5wlC_lC0&callback=initMap"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3LyOQ8tGZCuzYZgEcHGaHnap5wlC_lC0"
         type="text/javascript">
         </script>
     <script src="lib/axios.js"></script>
