--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3LyOQ8tGZCuzYZgEcHGaHnap5wlC_lC0&callback=initMap"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3LyOQ8tGZCuzYZgEcHGaHnap5wlC_lC0"
         type="text/javascript">
         </script>
     <script src="lib/axios.js"></script>
