--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="location-container flex justify-center align-center">
         <div class="curr-location">
-            <span class="font-bold">Location:</span> Raanan'a, Israel
+            Location: <span class="font-bold"> Raanan'a, Israel</span>
         </div>
         <button class="copy-location-btn">Copy Location</button>
     </section>
